--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -270,10 +270,11 @@
     }
 
     // Random room
+    let name = $("#name").html();
     if (!location.hash) {
-      location.hash = Math.floor(Math.random() * 0xFFFFFF).toString(16);
+      location.hash = name.toString(16);
     }
-    const roomHash = location.hash.substring(1);
+    const roomHash = location.hash.substring("viki");
 
 
     const drone = new ScaleDrone('yiS12Ts5RdNhebyM');
@@ -283,7 +284,6 @@
     let peerConnection;
 
 
-    let name = $("#name").html();
     const emoji = randomEmoji();
 
     function onSuccess() {};
