--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -270,8 +270,10 @@
     }
 
     // Random room
+    let name = $("#name").html();
+
     if (!location.hash) {
-      location.hash = Math.floor(Math.random() * 0xFFFFFF).toString(16);
+      location.hash = name.toString(16);
     }
     const roomHash = location.hash.substring(1);
 
@@ -283,7 +285,6 @@
     let peerConnection;
 
 
-    let name = $("#name").html();
     const emoji = randomEmoji();
 
     function onSuccess() {};
