--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,12 +2,12 @@
       xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <div th:fragment="header-css">
-        <meta name="viewport" content="width=device-width, initial-sc ale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-sc ale=1, shrink-to-fit=no"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
               integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-              crossorigin="anonymous">
+              crossorigin="anonymous"/>
     </div>
 </head>
 <body>
