--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -23,13 +23,14 @@
             padding: 0 50px;
             font-family: -apple-system, BlinkMacSystemFont, sans-serif;
         }
+
         video {
-          max-width: calc(50% - 100px);
-          margin: 0 50px;
-          box-sizing: border-box;
-          border-radius: 2px;
-          padding: 0;
-          box-shadow: rgba(156, 172, 172, 0.2) 0px 2px 2px, rgba(156, 172, 172, 0.2) 0px 4px 4px, rgba(156, 172, 172, 0.2) 0px 8px 8px, rgba(156, 172, 172, 0.2) 0px 16px 16px, rgba(156, 172, 172, 0.2) 0px 32px 32px, rgba(156, 172, 172, 0.2) 0px 64px 64px;
+            max-width: calc(50% - 100px);
+            margin: 0 50px;
+            box-sizing: border-box;
+            border-radius: 2px;
+            padding: 0;
+            box-shadow: rgba(156, 172, 172, 0.2) 0px 2px 2px, rgba(156, 172, 172, 0.2) 0px 4px 4px, rgba(156, 172, 172, 0.2) 0px 8px 8px, rgba(156, 172, 172, 0.2) 0px 16px 16px, rgba(156, 172, 172, 0.2) 0px 32px 32px, rgba(156, 172, 172, 0.2) 0px 64px 64px;
         }
 
         .content {
@@ -203,20 +204,17 @@
 <div class="content">
     <div class="inbox_msg">
         <div class="inbox_people">
-            <!--                ---------srch---------------------------------------->
+
             <div class="headind_srch">
-<!--                <div class="recent_heading">-->
-<!--                    <h4>Recent</h4>-->
-<!--                </div>-->
                 <div class="srch_bar">
                     <div class="stylish-input-group">
-                        <input type="text" class="search-bar" placeholder="Search">
+                        <input type="text" class="search-bar" placeholder="Search"/>
                         <span class="input-group-addon">
                 <button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
                 </span></div>
                 </div>
             </div>
-            <!----------------------------inbox chat------------------------------>
+
             <div class="inbox_chat">
                 <div class="chat_list active_chat">
                     <div class="chat_people">
@@ -228,7 +226,7 @@
                     </div>
                 </div>
             </div>
-            <!--                -------------------------------------------------->
+
         </div>
 
         <button type="button" class="btn btn-primary" onclick='createVideo()'>video</button>
@@ -236,7 +234,7 @@
 
         </div>
         <form class="footer" onsubmit="return false;">
-            <input id="messageInput" type="text" placeholder="Your message..">
+            <input id="messageInput" type="text" placeholder="Your message.."/>
             <button type="submit" onclick='sendMessage()'>Send</button>
         </form>
 
@@ -251,8 +249,8 @@
 </div>
 
 <video_two>
-  <video id="localVideo" autoplay muted></video>
-  <video id="remoteVideo" autoplay></video>
+    <video id="localVideo" autoplay = "autoplay"  muted = "muted"></video>
+    <video id="remoteVideo" autoplay = "autoplay"></video>
 </video_two>
 
 <div th:replace="fragments/footer :: footer"/>
@@ -271,7 +269,7 @@
 
     // Random room
     if (!location.hash) {
-      location.hash = Math.floor(Math.random() * 0xFFFFFF).toString(16);
+        location.hash = Math.floor(Math.random() * 0xFFFFFF).toString(16);
     }
     const roomHash = location.hash.substring(1);
 
@@ -286,35 +284,37 @@
     let name = $("#name").html();
     const emoji = randomEmoji();
 
-    function onSuccess() {};
+    function onSuccess() {
+    };
+
     function onError(error) {
-      console.error(error);
+        console.error(error);
     };
 
     drone.on('open', error => {
-      if (error) {
-        return console.error(error);
-      }
-      room = drone.subscribe(roomName);
-      room.on('open', error => {
         if (error) {
-          onError(error);
+            return console.error(error);
         }
-      });
-      // list person
-      // connect to room
-      room.on('members', members => {
-        console.log('MEMBERS', members);
-        const isOfferer = members.length === 2;
-        initialize(isOfferer);
-      });
+        room = drone.subscribe(roomName);
+        room.on('open', error => {
+            if (error) {
+                onError(error);
+            }
+        });
+        // list person
+        // connect to room
+        room.on('members', members => {
+            console.log('MEMBERS', members);
+            const isOfferer = members.length === 2;
+            initialize(isOfferer);
+        });
     });
 
     function send(message) {
-      drone.publish({
-        room: roomName,
-        message
-      });
+        drone.publish({
+            room: roomName,
+            message
+        });
     }
 
     var input = document.getElementById("messageInput");
@@ -329,63 +329,62 @@
 
         // Setup ice handling
         peerConnection.onicecandidate = event => {
-          if (event.candidate) {
-            send({'candidate': event.candidate});
-          }
+            if (event.candidate) {
+                send({'candidate': event.candidate});
+            }
         };
 
         dataChannel = peerConnection.createDataChannel("dataChannel", {
-            reliable : true
+            reliable: true
         });
 
 
         if (isOfferer) {
-          peerConnection.onnegotiationneeded = () => {
-            peerConnection.createOffer().then(localDescCreated).catch(onError);
-          }
+            peerConnection.onnegotiationneeded = () => {
+                peerConnection.createOffer().then(localDescCreated).catch(onError);
+            }
         }
 
         // display remote stream in #remoteVideo
         peerConnection.ontrack = event => {
-          const stream = event.streams[0];
-          if (!remoteVideo.srcObject || remoteVideo.srcObject.id !== stream.id) {
-            remoteVideo.srcObject = stream;
-          }
+            const stream = event.streams[0];
+            if (!remoteVideo.srcObject || remoteVideo.srcObject.id !== stream.id) {
+                remoteVideo.srcObject = stream;
+            }
         };
-/*
-        navigator.mediaDevices.getUserMedia({
-          audio: true,
-          video: true,
-        }).then(stream => {
-          // show your local video #localVideo
-          localVideo.srcObject = stream;
-          // add your thread to the peer
-          stream.getTracks().forEach(track => peerConnection.addTrack(track, stream));
-        }, onError);
-*/
+        /*
+                navigator.mediaDevices.getUserMedia({
+                  audio: true,
+                  video: true,
+                }).then(stream => {
+                  // show your local video #localVideo
+                  localVideo.srcObject = stream;
+                  // add your thread to the peer
+                  stream.getTracks().forEach(track => peerConnection.addTrack(track, stream));
+                }, onError);
+        */
         room.on('data', (message, client) => {
-          if (client.id === drone.clientId) {
-            return;
-          }
+            if (client.id === drone.clientId) {
+                return;
+            }
 
-          if (message.sdp) {
-            // called after receiving a proposal or response from another user
-            peerConnection.setRemoteDescription(new RTCSessionDescription(message.sdp), () => {
-              // upon receipt of the offer, we respond to it
-              if (peerConnection.remoteDescription.type === 'offer') {
-                peerConnection.createAnswer().then(localDescCreated).catch(onError);
-              }
-            }, onError);
-          } else if (message.candidate) {
-            // add new ICE candidate to remote connection description
-            peerConnection.addIceCandidate(
-              new RTCIceCandidate(message.candidate), onSuccess, onError
-            );
-          }
+            if (message.sdp) {
+                // called after receiving a proposal or response from another user
+                peerConnection.setRemoteDescription(new RTCSessionDescription(message.sdp), () => {
+                    // upon receipt of the offer, we respond to it
+                    if (peerConnection.remoteDescription.type === 'offer') {
+                        peerConnection.createAnswer().then(localDescCreated).catch(onError);
+                    }
+                }, onError);
+            } else if (message.candidate) {
+                // add new ICE candidate to remote connection description
+                peerConnection.addIceCandidate(
+                    new RTCIceCandidate(message.candidate), onSuccess, onError
+                );
+            }
         });
 
 
-        // ........................................RECEIVING MESSAGE ....................................................
         dataChannel.onmessage = function (event) {
             insertMessageToDOM(JSON.parse(event.data), false)
         };
@@ -421,22 +420,22 @@
 
     function createVideo() {
         navigator.mediaDevices.getUserMedia({
-          audio: true,
-          video: true,
+            audio: true,
+            video: true,
         }).then(stream => {
-          // show your local video #localVideo
-          localVideo.srcObject = stream;
-          // add your thread to the peer
-          stream.getTracks().forEach(track => peerConnection.addTrack(track, stream));
+            // show your local video #localVideo
+            localVideo.srcObject = stream;
+            // add your thread to the peer
+            stream.getTracks().forEach(track => peerConnection.addTrack(track, stream));
         }, onError);
     }
 
     function localDescCreated(desc) {
-      peerConnection.setLocalDescription(
-        desc,
-        () => send({'sdp': peerConnection.localDescription}),
-        onError
-      );
+        peerConnection.setLocalDescription(
+            desc,
+            () => send({'sdp': peerConnection.localDescription}),
+            onError
+        );
     }
 
     function sendMessage() {
