Проработал страничку фронта и поправил некоторые недочёты

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,7 +13,9 @@
 <body>
 <div th:fragment="header">
     <nav class="p-3 navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/main">noSkype</a>
+        <a class="navbar-brand" href="/main">
+            <img src="/static/images/logo.png" height="30" alt="CoolBrand"/>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
