--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -4,13 +4,21 @@
 <head>
     <title> Greeting Page </title>
     <div th:replace="fragments/header :: header-css"/>
+    <link rel="stylesheet" href="/static/css/Home.css" media="screen">
+    <link rel="stylesheet" href="/static/css/nicepage.css" media="screen">
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+
 </head>
-<body>
+<body class="u-body u-xl-mode">
 <div th:replace="fragments/header :: header"/>
 
-<div class="container mt-5">
-    <h1> Hello, you are on the main page noSkype programm! </h1>
-</div>
+<section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="256" data-image-height="256" id="sec-76db">
+    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <h1 class="u-text u-text-default u-title u-text-1">noSkype</h1>
+        <p class="u-large-text u-text u-text-default u-text-variant u-text-2">Веб-приложение для комфортного общения как в формате сообщений, так и по видеосвязи.&nbsp;</p>
+        <a href="/main" class="u-btn u-button-style u-palette-2-base u-btn-1">Go to App</a>
+    </div>
+</section>
 
 <div th:replace="fragments/footer :: footer"/>
 </body>
