--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -201,13 +201,19 @@
 <body>
 <div th:replace="fragments/header :: header"/>
 
+
 <div class="content">
     <div class="inbox_msg">
         <div class="inbox_people">
             <div class="headind_srch">
                 <div class="srch_bar">
                     <div class="stylish-input-group">
-                        <form th:action="@{/main}" th:method="post">
+                        <form id="postMain" th:action="@{/main}" th:method="post">
+<!--                            <div>-->
+<!--                                <b>Your companion:</b>-->
+<!--                                <span id="companion" th:name="companion" th:text="${companion}"></span>-->
+<!--                                <br>-->
+<!--                            </div>-->
                             <input id="searchUsername" th:name="searchUsername" onclick="getListUsers()" th:type="text"
                                    class="search-bar" placeholder="Search"/>
                         </form>
@@ -258,6 +264,6 @@
 </video_two>
 
 <div th:replace="fragments/footer :: footer"/>
-<script src = "/static/js/script.js"></script>
+<script src="/static/js/script.js"></script>
 </body>
 </html>
