--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -17,6 +17,7 @@
         <tr>
             <th>Id</th>
             <th>User Name</th>
+            <th>Password</th>
             <th>Email</th>
             <th>Phone</th>
             <th>Roles</th>
@@ -24,6 +25,7 @@
         <tr th:each="user : ${users}">
             <td th:utext="${user.id}">...</td>
             <td th:utext="${user.username}">...</td>
+            <td th:utext="${user.password}">...</td>
             <td th:utext="${user.email}">...</td>
             <td th:utext="${user.phone}">...</td>
             <td th:utext="${user.roles}">...</td>
